--- a/CasaLink.html
+++ b/CasaLink.html
@@ -109,6 +109,6 @@
     <!-- Link to the external JavaScript file -->
     <script src="CasaLink.js"></script>
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=_&callback=initMap" async defer></script>
 </body>
 </html>
